# bazelpoc

./: BUILD  Cargo.toml  README.md  WORKSPACE
src/: main.rs
