[package]
name = "bazelpoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicbor = { version = "0.18.0", features = ["alloc", "derive"] }

[workspace.metadata.raze]
workspace_path = "//cargo"
targets = ["x86_64-unknown-linux-gnu"]
output_buildfile_suffix = "BUILD"
gen_workspace_prefix = "bazelpoc"
genmode = "Remote"
default_gen_buildrs = true